# nagi_joy_pc

./: .gitignore  .gitmodules  Cargo.toml  README.md  README_CN.md
conf/: config.toml
src/: config.rs  joy_data.rs  main.rs  service.rs
src/message/: common.rs  joystick.rs  mod.rs
tests/: vjoy_tests.rs
